--- a/CardEditor/UI/index.html
+++ b/CardEditor/UI/index.html
@@ -143,6 +143,10 @@
             flex-shrink: 0;
         }
         
+        .card-image-container.square {
+            aspect-ratio: 1 / 1;
+        }
+        
         .card-image-container img {
             width: 100%;
             height: 100%;
